@@ -87,8 +87,6 @@ class Sys::Socket {
   
   native static method sockatmark : int ($sockfd : int);
   
-  native static method to_family_sockaddr : Sys::Socket::Sockaddr ($addr : Sys::Socket::Sockaddr);
-  
   native static method socket_errno : int ();
   
   native static method socket_strerror : string ($errno : int, $length : int = 0);
